--- a/web dev/style.css
+++ b/web dev/style.css
@@ -9,7 +9,7 @@ body{
 }
 
 .container {
-    background-color: #e2cbcb;
+    background-color: #f2f2f2;
     padding: 5px 20px 15px 20px ;
     border: 2px solid lightgray;
     border-radius: 12px;
@@ -20,15 +20,21 @@ input[type=email],
 input[type=number],
 input[type=password],
 input[type=date],
-
+select,
+textarea {
+    width: 100%;
+    padding:15px;
+    border: 1px solid lightgrey;
+    border-radius: 5px;
+    margin:12px;
+}
 
 .main_heading{
     text-align: center;
 }
 
 fieldset{
-    text-align: left;
-    border: 1px solid rgba(211, 211, 211, 0.66);
+    border: 1px solid lightgray;
     border-radius:5px;
 }
 
